Added documentation and changes to initial checks (#5)
Changed sense of Verified on the model 

Rather than having Verified = true for all checks we now have Disabled
= false meaning this field can be omitted for manually maintained
checks.

--- a/output/Darwin.Audit.CISMacOS13.yaml
+++ b/output/Darwin.Audit.CISMacOS13.yaml
@@ -407,7 +407,10 @@ sources:
 
 - name: AllTests
   query: |
-    SELECT * FROM AllTests
+    SELECT *,
+      get(item=Env,
+          member=format(format="%v.%v", args=[Id, TestId])) AS CheckDetails
+    FROM AllTests
 
 - name: Remediation
   query: |
